# esp32-agent

./: .clang-format  .gitignore  CMakeLists.txt  README.md  generate.sh  partitions.csv  sdkconfig  sdkconfig.old  write_spiffs_image.sh
assets/: generate.sh
doc/: .$connections.drawio.svg.bkp  .$connections.drawio.svg.dtmp  connection.tex  esp32s3-board.qet
doc/qelectrotech-elements/: esp32s3-devkit-c1.elmt  max38357a.elmt
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.bak.cpp  main.cpp
main/include/: application.h  audio.h  device.h  event.h  fast_hsv2rgb.h  flash.h  led.h  mutex.h  network.h  ui_status.h  wav.h
main/include/audio/: codec.h  mic.h  speaker.h  wav.h
main/include/display/: lv_font.h  oled_display.h  ssd1306_i2c.h  ssd1306_oled.h  ui.h
main/include/led/: led.h  rgb_led.h
main/src/: application.cpp  audio.cpp  fast_hsv2rgb_32bit.c  flash.cpp  led.cpp  network.cpp
main/src/audio/: mic.cpp  speaker.cpp
main/src/display/: cascadia_code_14.c  duby_logo.c  inconsolata_14.c  inter_32.c  md_icons_14.c  oled_display.cpp  ssd1306_i2c.cpp  ssd1306_oled.cpp  ui.cpp  wqy_st_12.c  wqy_st_14.c
main/src/led/: fast_hsv2rgb_32bit.c  rgb_led.cpp
